--- a/TestModule/appveyor.yml
+++ b/TestModule/appveyor.yml
@@ -1,17 +1,7 @@
 version: 1.0.{build}
 
-# Allow WMF5 (i.e. PowerShellGallery functionality)
-os: WMF 5
-
-# Skip on updates to the readme.
-# We can force this by adding [skip ci] or [ci skip] anywhere in commit message 
 skip_commits:
   message: /updated readme.*|update readme.*s/
 
-
-build: false
-
-# Kick off the CI/CD pipeline
 test_script:
-  # Test with native PS version
-  - ps: . .\Tests\TestModule.Tests.ps1 -Test
+  - ps: . .\TestModule.Tests.ps1
