--- a/TestModule/appveyor.yml
+++ b/TestModule/appveyor.yml
@@ -3,5 +3,8 @@ version: 1.0.{build}
 skip_commits:
   message: /updated readme.*|update readme.*s/
 
+install:
+  - cinst pester -y
+
 test_script:
-  - ps: TestModule.Tests.ps1
+  - ps: TestModule\TestModule.Tests.ps1
